# Dejaveph

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Prompt.md  README.md  flake.nix
crates/xet-agent/: Cargo.toml
crates/xet-agent/src/: lib.rs
crates/xet-core/: Cargo.toml
crates/xet-core/src/: lib.rs
crates/xetd/: Cargo.toml
crates/xetd/src/: blob.rs  cap.rs  main.rs  s3.rs  state.rs
crates/xetd/tests/: conformance.rs  m0_amplification.rs  m0_concurrent_put.rs  m0_core_cas.rs  m0_filehash_integrity.rs  m0_parser_fuzz.rs  m0_range_edges.rs  m0_register_validation.rs  m0_xorbs.rs  m1_chunks.rs  m1_dedup.rs  m2_ro_vfs.rs  m3_writable.rs  m4_capability.rs  m4_s3_rgw.rs  m5_operate.rs
crates/xetd/tests/common/: mod.rs
crates/xetfs/: Cargo.toml
crates/xetfs/src/: lib.rs  main.rs
docs/: DEPLOYMENT.md  DEVLOG.md  Plan&Execution.md  macos-client.md
nixos/: example.nix  module.nix  xetfs.nix
scripts/: README.md  bootstrap-ceph.sh  dejaveph-doctor.sh
templates/: README.md
templates/client/: flake.nix
templates/demo/: flake.nix
templates/gateway/: flake.nix
