[package]
name = "xetd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Self-hosted Xet CAS server (Prompt.md). M0 skeleton: CLI + HTTP server + stub handlers."

[[bin]]
name = "xetd"
path = "src/main.rs"

[dependencies]
xet-core-facade = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# E2E harness (tests/common): drives the real `xetd` binary + the xet-agent pipeline.
xet-agent = { workspace = true }
# No TLS backend: the harness only talks to a loopback http:// server.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
sha2 = "0.10"
tempfile = "3"
serde_json = { workspace = true }
