[package]
name = "xetd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Self-hosted Xet CAS server (Prompt.md). M0 skeleton: CLI + HTTP server + stub handlers."

[[bin]]
name = "xetd"
path = "src/main.rs"

[dependencies]
xet-core-facade = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# E2E harness (tests/common): drives the real `xetd` binary + the xet-agent pipeline.
xet-agent = { workspace = true }
# Conformance vectors call the fork primitives directly through the facade.
xet-core-facade = { workspace = true }
hex = "0.4"
# FUSE mount harness (m2+).
xetfs = { workspace = true }
fuser = { version = "0.14", default-features = false }
# No TLS backend: the harness only talks to a loopback http:// server.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
sha2 = "0.10"
tempfile = "3"
serde_json = { workspace = true }
