[package]
name = "xetd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Self-hosted Xet CAS server (Prompt.md). M0 skeleton: CLI + HTTP server + stub handlers."

[[bin]]
name = "xetd"
path = "src/main.rs"

[dependencies]
xet-core-facade = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# CSPRNG for bearer-token minting via the getrandom(2) syscall (robust even when /dev is
# restricted — the failure mode that produced an all-zero token before; HIGH-2).
getrandom = "0.3"
# Non-poisoning Mutex: a panic while holding the index lock must NOT brick every later
# request (std::sync::Mutex poisons → permanent DoS). Defends the whole panic-under-lock class.
parking_lot = "0.12"
# Constant-time bearer-token comparison (timing side-channel hardening).
subtle = "2"
# Keyed MAC for the local-fs `/xorb-data` capability URL (HMAC-equivalent; BLAKE3 keyed hash is
# already in the dependency tree via the fork). Signs presign URLs with a TTL (§5.4/§10).
blake3 = "1"
# S3 / Ceph-RGW backend (M4) — opt-in so the default build (and the CI gate) stay lean.
aws-sdk-s3 = { version = "1", optional = true }

[features]
s3 = ["dep:aws-sdk-s3"]

[dev-dependencies]
# E2E harness (tests/common): drives the real `xetd` binary + the xet-agent pipeline.
xet-agent = { workspace = true }
# Conformance vectors call the fork primitives directly through the facade.
xet-core-facade = { workspace = true }
hex = "0.4"
# FUSE mount harness (m2+).
xetfs = { workspace = true }
fuser = { version = "0.14", default-features = false }
# No TLS backend: the harness only talks to a loopback http:// server.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
sha2 = "0.10"
tempfile = "3"
serde_json = { workspace = true }
