[package]
name = "xetfs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reconstructing FUSE filesystem over a Xet CAS (Prompt.md §9). M0 placeholder; mount lands at M2."

[lib]
name = "xetfs"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
# TODO(M2): add `fuser` + the data path (xet-agent, xet-core-facade) for the real mount.
