[package]
name = "xetfs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reconstructing FUSE filesystem over a Xet CAS (Prompt.md §9). M0 placeholder; mount lands at M2."

[lib]
name = "xetfs"
path = "src/lib.rs"

# Mount CLI: `xetfs --server <url> --volume <v> [--rw] <mountpoint>` — a foreground FUSE mount,
# ideal as a systemd service (see nixos/xetfs.nix).
[[bin]]
name = "xetfs"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
# default-features=false avoids libfuse/pkg-config; mounting goes through setuid `fusermount`.
fuser = { version = "0.14", default-features = false }
libc = "0.2"
xet-agent = { workspace = true }
# `rustls-tls` lets the mount connect to a TLS-fronted xetd (https://…), not just loopback http.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = { workspace = true }
